--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
                     <h1>Prateleiras</h1>
                     <h4>Preços a partir de <span> 100.000 kz </span> </h4>
                   
-                    <a href="" class="btn-buy">Comprar</a>
-                    <span> <a href="" class="btn">Quero Desconto</a></span>
+                    <a href="https://forms.gle/KFv93v4TYrvZkVGSA" class="btn-buy" target="_blank">Comprar</a>
+                    <span> <a href="https://forms.gle/KFv93v4TYrvZkVGSA" class="btn" target="_blank"><Quero Desconto</a></span>
                     <h3>Detalhes</h3>
                     <br>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
