--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
@@ -61,8 +61,8 @@
                     <h1>Prateleiras</h1>
                     <h4>Preços a partir de <span> 100.000 kz </span> </h4>
                   
-                    <a href="" class="btn-buy">Comprar</a>
-                    <span> <a href="" class="btn">Quero Desconto</a></span>
+                    <a href="https://forms.gle/81TQFE87hHjGgHmv9" class="btn-buy" target="blank">Comprar</a>
+                    <span> <a href="https://forms.gle/81TQFE87hHjGgHmv9" class="btn" target="blank">Quero Desconto</a></span>
                     <h3>Detalhes</h3>
                     <br>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
